# mirror

./: Cargo.toml  readme.md
examples/: differentiation.rs  icosahedron.rs
src/: color.rs  context.rs  lib.rs  main.rs  mesh.rs  mirror.rs  orbit.rs  plane.rs  plot.rs  shape.rs
src/pass/: mod.rs  phong.rs  phong.wgsl
