[package]
name = "mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
core_simd = { git = "https://github.com/rust-lang/stdsimd" }
glam = "0.20.0"
fxhash = "0.2.1"
bevy = "0.6.1"
g3 = { git = "https://github.com/wrnrlr/g3", rev = "bc7884e", features = ["bevy"] }
#g3 = { path = "../g3", package = "g3", features = ["bevy"] }
